--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/user-dashboard@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/user-dashboard@inprogress.mustache
@@ -89,23 +89,13 @@
 
                             <div class="pane pane--dashboard-featured-items">
                               <div class="pane__content">
-                                <ul class="list-class">
-                                  <li>
-
-                                    <article class="card">
-                                      <h2 class="card__dashboard-type">Exchange Updates</h2>
-                                      <div class="card__image">
-                                        <a href="{{ url }}">{{> atoms-card-image }}</a>
+                                <div class="view--card-view-3col">
+                                    {{# listItems.six }}
+                                      <div class="views-row">
+                                        {{> organisms-dashboard-teaser }}
                                       </div>
-                                      <div class="card__content">
-                                        <div class="card__type">content type</div>
-                                        <h3 class="card__title"><a href="{{ url }}">{{ title }}</a></h3>
-                                      </div>
-                                      <a href="#" class="card__favorite"></a>
-                                    </article>
-
-                                  </li>
-                                </ul>
+                                    {{/ listItems.six }}
+                                  </div>
                               </div>
                             </div>
 
