--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--dashboard-exchange-updates.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--dashboard-exchange-updates.scss
@@ -2,6 +2,7 @@
   background: #fff;
   border-bottom: 6px solid $orange;
   box-shadow: 0px -2px 4px rgba(0,0,0,0.25);
+  margin-bottom: 4em;
   padding: 1em;
   position: relative;
   &:after {
@@ -25,6 +26,18 @@
   }
   .pane__title {
     color: $orange;
+    font-size: em(16px);
+    font-weight: bold;
+    margin-bottom: 2em;
     text-align: center;
+    &:before {
+      @include svg-background(icon-exchange);
+      @include image-replace(25px,25px);
+      content: "";
+      display: inline-block;
+      margin-right: 6px;
+      position: relative;
+      top: 6px;
+    }
   }
 }
