--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/user-dashboard@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/user-dashboard@inprogress.mustache
@@ -110,7 +110,7 @@
                                 <td>
                                   <div class="layout-slat">
                                     <div class="layout-slat__media">
-                                      <a href="{{ url }}">{{> atoms-thumbnail-image }}</a>
+                                      <a href="{{ url }}">{{> atoms-card-image }}</a>
                                     </div>
                                     <div class="layout-slat__content">
                                       <div class="dashboard-table__date">{{> atoms-medium-date }}</div>
@@ -133,23 +133,51 @@
                                 <div class="pane__content">
                                   <div class="view view--dashboard-new-users">
                                     <div class="views-row">
-                                      <div class="views-field views-field-nothing">
-                                        <span class="field-content"><a href="#"><img title="Default image, no image supplied by the user." alt="Default image, no image supplied by the user." src="http://giexchange-dev.s3.amazonaws.com/styles/dashboard_profile_image/s3/random/user/iStock_000052855756.jpg?itok=bXp7YfdZ" typeof="foaf:Image"></a> Mike Dos  joined the Exchange <em class="placeholder">2 weeks 1 day</em> ago</span>
+                                      <div class="layout-slat layout-slat--small">
+                                        <div class="layout-slat__media">
+                                          <div class="view__author-image">
+                                            <img src="../../images/hannibal-58-58.jpg">
+                                          </div>
+                                        </div>
+                                        <div class="layout-slat__content">
+                                          <div class="view__description">Hannibal Lector joined the Exchange <em class="view__date">6 weeks 1 day</em> ago</div>
+                                        </div>
                                       </div>
                                     </div>
                                     <div class="views-row">
-                                      <div class="views-field views-field-nothing">
-                                        <span class="field-content"><a href="#"><img title="Default image, no image supplied by the user." alt="Default image, no image supplied by the user." src="http://giexchange-dev.s3.amazonaws.com/styles/dashboard_profile_image/s3/random/user/iStock_000050200156.jpg?itok=8D1X3BlN" typeof="foaf:Image"></a> Dashboard Test  joined the Exchange <em class="placeholder">3 weeks 1 day</em> ago</span>
+                                      <div class="layout-slat layout-slat--small">
+                                        <div class="layout-slat__media">
+                                          <div class="view__author-image">
+                                            <img src="../../images/josh-58-58.jpg">
+                                          </div>
+                                        </div>
+                                        <div class="layout-slat__content">
+                                          <div class="view__description">Josh Lyman joined the Exchange <em class="view__date">2 weeks 1 day</em> ago</div>
+                                        </div>
                                       </div>
                                     </div>
                                     <div class="views-row">
-                                      <div class="views-field views-field-nothing">
-                                        <span class="field-content"><a href="#"></a>    joined the Exchange <em class="placeholder">3 weeks 3 days</em> ago</span>
+                                      <div class="layout-slat layout-slat--small">
+                                        <div class="layout-slat__media">
+                                          <div class="view__author-image">
+                                            <img src="../../images/buffy-58-58.jpg">
+                                          </div>
+                                        </div>
+                                        <div class="layout-slat__content">
+                                          <div class="view__description">Bufy Summers joined the Exchange <em class="view__date">3 weeks 2 day</em> ago</div>
+                                        </div>
                                       </div>
                                     </div>
                                     <div class="views-row">
-                                      <div class="views-field views-field-nothing">
-                                        <span class="field-content"><a href="#"></a>    joined the Exchange <em class="placeholder">3 weeks 3 days</em> ago</span>
+                                      <div class="layout-slat layout-slat--small">
+                                        <div class="layout-slat__media">
+                                          <div class="view__author-image">
+                                            <img src="../../images/scully-58-58.jpg">
+                                          </div>
+                                        </div>
+                                        <div class="layout-slat__content">
+                                          <div class="view__description">Dana Scully joined the Exchange <em class="view__date">1 day</em> ago</div>
+                                        </div>
                                       </div>
                                     </div>
                                   </div>
