--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/02-view-modes/dashboard-teaser@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/02-view-modes/dashboard-teaser@inprogress.mustache
@@ -1,11 +1,11 @@
-<article class="card">
+<article class="card card--dashboard">
   <h2 class="card__dashboard-type{{ dashboardtypeclass }}">{{ dashboardtype }}</h2>
   <div class="card__image">
     <a href="{{ url }}">{{> atoms-card-image }}</a>
   </div>
   <div class="card__content">
     <div class="card__type">content type</div>
-    <h3 class="card__title"><a href="{{ url }}">{{ title }}</a></h3>
+    <h5 class="card__title"><a href="{{ url }}">{{ title }}</a></h5>
   </div>
-  <a href="#" class="card__favorite"></a>
+  <a href="#" class="card__favorite is-favorited"></a>
 </article>
