--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/02-view-modes/dashboard-teaser@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/02-view-modes/dashboard-teaser@inprogress.mustache
@@ -1,5 +1,5 @@
-<article class="card card--dashboard">
-  <h2 class="card__dashboard-type{{ dashboardtypeclass }}">{{ dashboardtype }}</h2>
+<article class="card card--spotlight">
+  <h2 class="card__spotlight-type{{ dashboardtypeclass }}">{{ dashboardtype }}</h2>
   <div class="card__image">
     <a href="{{ url }}">{{> atoms-card-image }}</a>
   </div>
