fixed favorite icons

--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/02-view-modes/dashboard-teaser@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/02-view-modes/dashboard-teaser@inprogress.mustache
@@ -8,4 +8,9 @@
     <h5 class="card__title"><a href="{{ url }}">{{ title }}</a></h5>
   </div>
   <a href="#" class="card__favorite is-favorited"></a>
+  <div class="flag-outer flag-outer-favorite">
+    <span class="flag-wrapper flag-favorite flag-favorite-6986">
+      <a class="flag flag-action flag-link-toggle flag-processed" href="#">Follow</a><span class="flag-throbber">&nbsp;</span>
+    </span>
+  </div>
 </article>
