--- a/public/sites/all/themes/gesso/sass/partials/components/_card.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_card.scss
@@ -227,18 +227,6 @@
   }
 }
 
-.card__favorite { // faovorite icon on dashboard cards
-  @include image-replace(19px,18px)
-  @include svg-background(icon-heart-empty);
-  bottom: 10px;
-  display: block;
-  position: absolute;
-  right: 10px;
-  &.is-favorited {
-    @include svg-background(icon-heart);
-  }
-}
-
 %cardicon {
   content: "";
   background-position: 50% 100%;
@@ -378,6 +366,26 @@
 
 .card--spotlight {
   @extend %dashboard-pane; // slightly different shadow if inside dashboard
+  .flag-wrapper {
+    position: static;
+    a {
+      background: none;
+      @include image-replace(19px,18px)
+      @include svg-background(icon-heart-empty);
+      border: 0;
+      bottom: 10px;
+      display: block;
+      font-size: 0%;
+      line-height: 0;
+      margin: 0;
+      padding: 0;
+      position: absolute;
+      right: 10px;
+      &.flagged {
+        @include svg-background(icon-heart);
+      }
+    }
+  }
 }
 
 .card--button {
