followed card styling, table adjustments

--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/card-types@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/card-types@inprogress.mustache
@@ -118,6 +118,19 @@
                         {{> organisms-organization-teaser }}
                       </div>
                     {{/ listItems.three }}
+                  </div>
+                </div>
+              </div>
+
+              <div class="pane">
+                <h2 class="pane__title">Spotlight Teaser</h2>
+                <div class="pane__content">
+                  <div class="view--card-view-3col">
+                    {{# listItems.three }}
+                      <div class="views-row">
+                        {{> organisms-spotlight-teaser }}
+                      </div>
+                    {{/ listItems.three }}
                     <div class="view__pager">
                       {{> molecules-pager }}
                     </div>
