--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/02-view-modes/spotlight-teaser@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/02-view-modes/spotlight-teaser@inprogress.mustache
@@ -4,7 +4,7 @@
     <a href="{{ url }}">{{> atoms-card-image }}</a>
   </div>
   <div class="card__content">
-    <div class="card__type">content type</div>
+    <h2 class="card__type">content type</h2>
     <h5 class="card__title"><a href="{{ url }}">{{ title }}</a></h5>
   </div>
   <a href="#" class="card__favorite is-favorited"></a>
