--- a/public/sites/all/themes/gesso/sass/partials/components/_dashboard-table.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_dashboard-table.scss
@@ -23,16 +23,16 @@
   color: #fff;
   font-size: 14px;
   padding: 10px;
-  position: relative;
   text-transform: uppercase;
+  white-space: nowrap;
   @include breakpoint(700px, $no-query: true) {
-    padding: 10px 35px 10px 50px;
+    padding: 10px 30px;
     &:before {
       content: "";
-      display: block;
-      position: absolute;
-      left: 20px;
-      top: 13px;
+      display: inline-block;
+      margin-right: 8px;
+      position: relative;
+      top: 4px;
     }
   }
 }
