--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/user-dashboard@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/user-dashboard@inprogress.mustache
@@ -99,6 +99,39 @@
                               </div>
                             </div>
 
+                            <div class="pane">
+                              <div class="pane__content">
+                                <div class="dashboard-filters">
+                                  <span class="dashboard-filters__item has-icon-sectors is-active"><input type="submit" class="button button--submit" value="My Sectors" name="op" id="edit-my-sectors--2"></span>
+                                  <span class="dashboard-filters__item has-icon-topics"><input type="submit" class="button button--submit" value="My Topics" name="op" id="edit-my-topics--2"></span>
+                                  <span class="dashboard-filters__item has-icon-my-friends"><input type="submit" class="button button--submit" value="My Friends" name="op" id="edit-my-friends--2"></span>
+                                  <span class="dashboard-filters__item has-icon-following"><input type="submit" class="button button--submit" value="I'm Following" name="op" id="edit-im-following--2"></span>
+                                </div>
+                                <div class="dashboard-filters">
+                                  <span class="dashboard-filters__item has-icon-innovation is-active"><input type="submit" class="button button--submit" value="My Innovations" name="op" id="edit-innovation"></span>
+                                  <span class="dashboard-filters__item has-icon-funding"><input type="submit" class="button button--submit" value="My Funding Opportunities" name="op" id="edit-funding"></span>
+                                  <span class="dashboard-filters__item has-icon-resource"><input type="submit" class="button button--submit" value="My Resources" name="op" id="edit-resource"></span>
+                                  <span class="dashboard-filters__item has-icon-event"><input type="submit" class="button button--submit" value="My Events" name="op" id="edit-event"></span></div>
+                                </div>
+                                <div class="dashboard-filters">
+                                  <span class="dashboard-filters__item has-icon-sectors is-active"><input type="submit" class="button button--submit" value="My Sectors" name="op" id="edit-my-sectors"></span>
+                                  <span class="dashboard-filters__item has-icon-topics"><input type="submit" class="button button--submit" value="My Topics" name="op" id="edit-my-topics"></span>
+                                  <span class="dashboard-filters__item has-icon-my-skills"><input type="submit" class="button button--submit" value="My Skills" name="op" id="edit-my-skills"></span>
+                                  <span class="dashboard-filters__item has-icon-my-friends"><input type="submit" class="button button--submit" value="My Friends" name="op" id="edit-my-friends"></span>
+                                  <span class="dashboard-filters__item has-icon-following"><input type="submit" class="button button--submit" value="I'm Following" name="op" id="edit-im-following"></span>
+                                </div>
+                                <div class="dashboard-filters">
+                                  <span class="dashboard-filters__item has-icon-members is-active"><input type="submit" class="button button--submit" value="Members" name="op" id="edit-net-users"></span>
+                                  <span class="dashboard-filters__item has-icon-innovation"><input type="submit" class="button button--submit" value="Innovations" name="op" id="edit-net-innovation"></span>
+                                  <span class="dashboard-filters__item has-icon-funding"><input type="submit" class="button button--submit" value="Funding Ops" name="op" id="edit-net-funding"></span>
+                                  <span class="dashboard-filters__item has-icon-resource"><input type="submit" class="button button--submit" value="Resources" name="op" id="edit-net-resource"></span>
+                                  <span class="dashboard-filters__item has-icon-event"><input type="submit" class="button button--submit" value="Events" name="op" id="edit-net-event"></span>
+                                  <span class="dashboard-filters__item has-icon-organization"><input type="submit" class="button button--submit" value="Organizations" name="op" id="edit-net-organization"></span>
+                                  <span class="dashboard-filters__item has-icon-program"><input type="submit" class="button button--submit" value="Programs" name="op" id="edit-net-program"></span>
+                                </div>
+                              </div>
+                            </div>
+
                             <table class="dashboard-table">
                               <tr>
                                 <th></th>
