adjusted dashboard tabs

--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/user-dashboard@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/user-dashboard@inprogress.mustache
@@ -111,7 +111,7 @@
                                   <span class="dashboard-filters__item has-icon-innovation is-active"><input type="submit" class="button button--submit" value="My Innovations" name="op" id="edit-innovation"></span>
                                   <span class="dashboard-filters__item has-icon-funding"><input type="submit" class="button button--submit" value="My Funding Opportunities" name="op" id="edit-funding"></span>
                                   <span class="dashboard-filters__item has-icon-resource"><input type="submit" class="button button--submit" value="My Resources" name="op" id="edit-resource"></span>
-                                  <span class="dashboard-filters__item has-icon-event"><input type="submit" class="button button--submit" value="My Events" name="op" id="edit-event"></span></div>
+                                  <span class="dashboard-filters__item has-icon-event"><input type="submit" class="button button--submit" value="My Events" name="op" id="edit-event"></span>
                                 </div>
                                 <div class="dashboard-filters">
                                   <span class="dashboard-filters__item has-icon-sectors is-active"><input type="submit" class="button button--submit" value="My Sectors" name="op" id="edit-my-sectors"></span>
