--- a/public/sites/all/themes/gesso/sass/partials/components/_quicktabs-tabs.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_quicktabs-tabs.scss
@@ -16,7 +16,8 @@
     display: table-cell;
     //float: left;
     line-height: 1;
-    white-space: nowrap; 
+    padding: 0; // override quicktabs module
+    white-space: nowrap;
     a {
       color: $primary-text-color;
       font-weight: normal;
