[#49535] Added logic for events classing

--- a/public/sites/all/themes/gesso/sass/partials/components/_card.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_card.scss
@@ -52,6 +52,14 @@
   }
 }
 
+.card__spotlight-type-event {
+  @extend %card__spotlight-type;
+  background: $blue;
+  &:before {
+    @include svg-background(icon-exchange-white);
+  }
+}
+
 .card__spotlight-type-followed {
   @extend %card__spotlight-type;
   background: $red;
