added color options to microsite-text. fixed grunt watch task

--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/microsite-page@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/microsite-page@inprogress.mustache
@@ -6,6 +6,11 @@
     <div class="region__inner">
      {{> molecules-microsite-header-with-arrow }}
      {{> molecules-microsite-text-centered }}
+     {{> molecules-microsite-text-centered(color: "microsite-primary") }}
+     {{> molecules-microsite-text-centered(color: "microsite-secondary") }}
+     {{> molecules-microsite-text-centered(color: "microsite-tertiary") }}
+     {{> molecules-microsite-text-centered(color: "microsite-light-gray") }}
+     {{> molecules-microsite-text-centered(color: "microsite-dark-gray") }}
      {{> molecules-microsite-break }}
      {{> molecules-microsite-50-50(color: "microsite-primary") }}
      {{> molecules-microsite-50-50(class: "microsite-50-50--reversed", color: "microsite-secondary") }}
