--- a/public/sites/all/themes/gesso/sass/partials/components/_user-register-form.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_user-register-form.scss
@@ -1,6 +1,4 @@
 #user-register-form {
-  // border: 2px solid #cecfcb;
-  // box-shadow: 0 2px 4px 2px rgba(0, 0, 0, 0.15);
   max-width: 750px;
   margin: 1em auto 2em auto;
   overflow: hidden;
@@ -18,7 +16,6 @@
 
   #edit-lr-social-login-links {
     &:after {
-      // border-bottom: 1px solid #cecfcb;
       content: "Or sign up with your Email Address";
       display: block;
       font-size: em(18px, 16px);
@@ -71,10 +68,17 @@
   }
 
   .password-strength {
-    @include breakpoint(max-width 650px) {
-      float: none;
-      margin: 0.5em 0;
-    }
+    display: none;
+  }
+
+  input.password-confirm,
+  input.password-field {
+    width: 100%;
+  }
+
+  .confirm-parent,
+  .password-parent {
+    width: auto;
   }
 
   #edit-lr-social-login-links > label {
