moved report button on funding detail page, removed unneeded pane--button classes, adjusted theming on share button pane

--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/05-panes/report-button@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/05-panes/report-button@inprogress.mustache
@@ -1,1 +1,1 @@
-<div class='pane pane--button'><span class='flag-wrapper flag-abuse-node'><a href='#' class='flag-action'>Flag this as Inappropriate</a></span></div>
+<div class='pane'><span class='flag-wrapper flag-abuse-node'><a href='#' class='flag-action'>Flag this as Inappropriate</a></span></div>
