--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/01-content-types/resource@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/01-content-types/resource@inprogress.mustache
@@ -70,7 +70,7 @@
     </div>
     <aside class="l-bottom-sidebar">
       {{> molecules-favorite-this }}
-      <div class='pane'><div class='sharethis-buttons'><a href='#' class='st_sharethis_custom'>Share</a></div></div>
+      <div class='pane pane--nodesharethis'><div class='sharethis-buttons'><a href='#' class='st_sharethis_custom'>Share</a></div></div>
       {{> molecules-report-button }}
     </aside>
   </div>
