--- a/public/sites/all/themes/gesso/sass/partials/components/_user-register-form.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_user-register-form.scss
@@ -36,7 +36,7 @@
   }
 
   .button--submit {
-    margin: 0.5em 0;
+    margin: 1.8em 1em 1em 0;
   }
 
   .field-name-field-user-photo {
@@ -107,4 +107,10 @@
     display: none;
   }
 
+}
+
+#user-pass {
+  div#google_recaptcha_user_pass {
+    margin: 0 0em 1.5em 0;
+  }
 }
