moved captcha styling around a bit

--- a/public/sites/all/themes/gesso/sass/overrides/super_login/super-login.scss
+++ b/public/sites/all/themes/gesso/sass/overrides/super_login/super-login.scss
@@ -36,6 +36,10 @@
     font-size: 0.8em;
   }
 
+  #google_recaptcha_user_pass {
+    margin: 0 0 1.5em 0;
+  }
+
   .button--submit {
      margin: 0;
   }
