--- a/public/sites/all/themes/gesso/sass/partials/components/_user-register-form.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_user-register-form.scss
@@ -35,8 +35,12 @@
     margin: 1.5em 0 0.75em 0;
   }
 
+  #google_recaptcha_user_register_form {
+    margin-bottom: 1.5em;
+  }
+
   .button--submit {
-    margin: 1.8em 1em 1em 0;
+    margin: 0.5em 0;
   }
 
   .field-name-field-user-photo {
@@ -93,7 +97,7 @@
     margin-bottom: 0;
   }
 
-  #edit-actions {
+  #edit-actions { 
     text-align: center;
     margin-top: em(33px, 16px);;
     > p {
@@ -107,10 +111,4 @@
     display: none;
   }
 
-}
-
-#user-pass {
-  div#google_recaptcha_user_pass {
-    margin: 0 0em 1.5em 0;
-  }
 }
