lowered z-index on login links so they do not jump in front of main nav dropdowns

--- a/public/sites/all/themes/gesso/sass/partials/components/_edit-lr-social-login-links.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_edit-lr-social-login-links.scss
@@ -7,6 +7,7 @@
   margin-bottom: 0 !important;
   padding-left: 1em;
   width: auto;
+  z-index: 2;
   &:before {
     @include image-replace(18px,18px);
     content: "";
