--- a/public/sites/all/themes/gesso/sass/partials/global/variables/_colors.scss
+++ b/public/sites/all/themes/gesso/sass/partials/global/variables/_colors.scss
@@ -5,6 +5,7 @@
 $blue: #003359;
 $lightblue: #7090b7;
 $orange: #dc5606;
+$midorange: #e16c25;
 $lightorange: #ed7d3a;
 $red: #b71234;
 $gray: #f8f8f8;
