removed beta tags and logos

--- a/public/sites/all/themes/gesso/sass/partials/components/_site-name.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_site-name.scss
@@ -25,10 +25,10 @@
   display: block;
 
   .page-simple & {
-    background: url('../images/gix-beta-logo.png');
+    background: url('../images/gix-logo.png');
     background-size: contain;
     background-repeat: no-repeat;
     height: 42px;
-    width: 303px;
+    width: 189px;
   }
 }
