--- a/public/sites/all/themes/gesso/sass/partials/components/_beta-version.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_beta-version.scss
@@ -1,49 +1,49 @@
-.beta-version {
-  margin: 0;   
-  h2 {
-    font-size: em(12px);
-    font-weight: 900;
-    margin: 0;
-    padding: 0;
-  }
- 
-  .region-header & { // header version
-    float: left;
-    h2 {
-      color: #aaa;
-      line-height: 2.5em;
-    }
-  }
-  
-  .pane--homepage-header & { // homepage version
-    bottom: 0;
-    position: absolute;
-    right: 0;
-    text-align: right;
-    width: 75px;
-    z-index: 2;
-    @include breakpoint(max-width 400px) {
-      display: none;
-    }
-    h2 {
-      color: #fff;
-      line-height: 1.4;
-      padding: 0 1em 1em 0;
-      position: relative;
-      z-index: 2;
-    }
-    &:after {
-      content: "";
-      display: block;
-      border-style: solid;
-      border-width: 0 0 157px 94px;
-      border-color: transparent transparent $blue transparent;
-      bottom: 0;
-      height: 0;
-      position: absolute;
-      right: 0;
-      width: 0;
-      z-index: 1;
-    }
-  }
-}
+// .beta-version {
+//   margin: 0;
+//   h2 {
+//     font-size: em(12px);
+//     font-weight: 900;
+//     margin: 0;
+//     padding: 0;
+//   }
+//
+//   .region-header & { // header version
+//     float: left;
+//     h2 {
+//       color: #aaa;
+//       line-height: 2.5em;
+//     }
+//   }
+//
+//   .pane--homepage-header & { // homepage version
+//     bottom: 0;
+//     position: absolute;
+//     right: 0;
+//     text-align: right;
+//     width: 75px;
+//     z-index: 2;
+//     @include breakpoint(max-width 400px) {
+//       display: none;
+//     }
+//     h2 {
+//       color: #fff;
+//       line-height: 1.4;
+//       padding: 0 1em 1em 0;
+//       position: relative;
+//       z-index: 2;
+//     }
+//     &:after {
+//       content: "";
+//       display: block;
+//       border-style: solid;
+//       border-width: 0 0 157px 94px;
+//       border-color: transparent transparent $blue transparent;
+//       bottom: 0;
+//       height: 0;
+//       position: absolute;
+//       right: 0;
+//       width: 0;
+//       z-index: 1;
+//     }
+//   }
+// }
