--- a/public/sites/all/themes/gesso/sass/overrides/tb_megamenu/base.scss
+++ b/public/sites/all/themes/gesso/sass/overrides/tb_megamenu/base.scss
@@ -852,6 +852,10 @@
   outline-offset: -2px;
 }
 
+.no-js .tb-megamenu-item.dropdown:hover .tb-megamenu-submenu {
+  display: block;
+}
+
 // @media (max-width: 979px) {
 // .tb-megamenu .navbar .brand {
 //     font-size: 13px;
@@ -970,7 +974,7 @@
 //   }
 // .tb-megamenu .nav-collapse .nav li a {
 //     margin-bottom: 0;
-//     border-top: 1px solid #d9d9d9;    
+//     border-top: 1px solid #d9d9d9;
 //   }
 // .tb-megamenu .nav-collapse .nav li ul li ul.dropdown-menu,
 // .tb-megamenu .nav-collapse .nav li ul li:hover ul.dropdown-menu,
@@ -978,7 +982,7 @@
 //     display: none !important;
 //   }
 // .tb-megamenu .nav-collapse .nav > li > a,
-// .tb-megamenu .nav-collapse .dropdown-menu a {     
+// .tb-megamenu .nav-collapse .dropdown-menu a {
 //     -webkit-border-radius: 0;
 //     -moz-border-radius: 0;
 //     border-radius: 0;
